<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/_excessive"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <com.framework2.customviews.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.framework.customview.OverScrollView
            android:id="@+id/overScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/_excessive">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/registerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_marginRight="@dimen/_20dp"
                        android:background="@drawable/shape_gray_white_stroke_10px"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:layout_marginLeft="20dp"
                                android:gravity="center"
                                android:src="@mipmap/ic_reg_login_account"/>

                            <EditText
                                android:id="@+id/et_register_phone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:hint="@string/hint_login"
                                android:inputType="phone"
                                android:paddingLeft="10dp"
                                android:textColor="@color/_black"
                                android:textColorHint="@color/_txt_hint"
                                android:textCursorDrawable="@null"
                                android:textSize="@dimen/_14dp"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/gray"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:gravity="center"
                                android:src="@mipmap/ic_reg_login_pwd"
                                android:textSize="@dimen/_14dp"/>

                            <EditText
                                android:id="@+id/et_register_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword"
                                android:paddingLeft="10dp"
                                android:textColor="@color/_black"
                                android:textColorHint="@color/_txt_hint"
                                android:textSize="@dimen/_14dp"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/gray"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:gravity="center"
                                android:src="@mipmap/ic_reg_login_pwd"
                                android:textSize="@dimen/_14dp"/>

                            <EditText
                                android:id="@+id/et_register_captcha"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@null"
                                android:hint="@string/hint_captcha"
                                android:inputType="number"
                                android:paddingLeft="10dp"
                                android:textColor="@color/_black"
                                android:textColorHint="@color/_txt_hint"
                                android:textCursorDrawable="@null"
                                android:textSize="@dimen/_14dp"/>

                            <View
                                android:layout_width="1px"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/_8dp"
                                android:layout_marginBottom="@dimen/_8dp"
                                android:background="@color/gray"/>

                            <TextView
                                android:id="@+id/tv_captcha"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:clickable="true"
                                android:gravity="center"
                                android:onClick="onClick"
                                android:paddingLeft="10dp"
                                android:paddingTop="10dp"
                                android:paddingRight="@dimen/_10dp"
                                android:paddingBottom="10dp"
                                android:text="获取验证码"
                                android:textColor="@color/color_selector_txt"
                                android:textSize="@dimen/_12dp"/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_protocol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:onClick="onClick"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/protocol"
                        android:textSize="@dimen/_12dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_sure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_50dp"
                    android:layout_marginTop="@dimen/_30dp"
                    android:layout_marginRight="@dimen/_50dp"
                    android:background="@drawable/selector_bt_ensure_login"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:padding="10dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14dp"/>
            </LinearLayout>

        </com.framework.customview.OverScrollView>

        <LinearLayout
            android:id="@+id/successLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_50dp"
                android:src="@mipmap/icon_success"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:text="注册成功"
                android:textColor="@color/_black"
                android:textSize="@dimen/_18dp"/>

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_marginRight="@dimen/_50dp"
                android:background="@drawable/selector_bt_ensure_login"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="返回登录"
                android:textColor="@color/white"
                android:textSize="@dimen/_14dp"/>

            <TextView
                android:id="@+id/tv_exist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:text="5S后返回登录页面"
                android:textColor="@color/_black_light"
                android:textSize="@dimen/_14dp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
