<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.framework.widget.OverScrollView
        android:id="@+id/overScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <com.library.percent.PercentLinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/launcher_icon"
                app:layout_heightPercent="20%sw"
                app:layout_widthPercent="20%sw" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:textStyle="bold"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_30dp"
                android:background="@drawable/shape_gray_white_stroke_10px"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:src="@mipmap/ic_reg_login_account" />

                    <EditText
                        android:id="@+id/etLoginPhone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/hint_login"
                        android:inputType="phone"
                        android:paddingLeft="10dp"
                        android:textColor="@color/_black"
                        android:textColorHint="@color/_txt_hint"
                        android:textSize="14dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:src="@mipmap/ic_reg_login_pwd"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/etLoginPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="@color/_black"
                        android:textColorHint="@color/_txt_hint"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/tv_forget_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/forgetPwd"
                        android:textColor="@color/_black_light"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_bt_ensure_login"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="登录"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_bt_ensure_register"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="注册"
                android:textColor="@color/_blue"
                android:textSize="@dimen/_14dp" />


        </com.library.percent.PercentLinearLayout>
    </com.framework.widget.OverScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_weight="1"
                android:background="@color/spaceline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第三方授权登录"
                android:textColor="@color/default_text_delivery"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_weight="1"
                android:background="@color/spaceline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/wchatLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/icon_wchat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="微信登录"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/qqLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/icon_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="QQ登录"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>